# langgraph-rag-agent-chat

./: .env.sample  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Dockerfile.prod  __init__.py  gunicorn.conf.py  main.py
backend/api/: __init__.py
backend/core/: __init__.py  config.py  db.py  limiter.py  logging.py  metrics.py  middleware.py
backend/crud/: __init__.py  chat_crud.py  document_crud.py  user_crud.py
backend/models/: __init__.py  base.py  chat.py  document.py  user.py
backend/services/: __init__.py  chat_service.py  document_service.py  langchain_agent.py  langgraph_agent.py  user_service.py
backend/utils/: __init__.py  extractor.py  storage.py
frontend/: Dockerfile  Dockerfile.prod  docker-entrypoint.sh  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css
infra/: DOCKERFILES.md  README.md
infra/ci-cd/: README.md  github-actions-aws.yml  github-actions-k8s.yml
infra/k8s/: LOCAL_DEPLOYMENT.md  MONITORING.md  README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  grafana-dashboard-configmap.yaml  grafana-dashboard-provisioning.yaml  grafana-dashboard.json  grafana-deployment.yaml  ingress.yaml  loki-config.yaml  loki-deployment.yaml  namespace.yaml  postgres-init-configmap.yaml  postgres-statefulset.yaml  prometheus-config.yaml  prometheus-deployment.yaml  promtail-config.yaml  promtail-daemonset.yaml  secrets.yaml.example
infra/terraform/: .gitignore  README.md  alb.tf  ecr.tf  ecs.tf  main.tf  outputs.tf  rds.tf  s3.tf  secrets.tf  security.tf  variables.tf  (+3 more)
(+21 files in other folders)
